css/main.css
/* ... */
header.filled {
  padding: 15px 25px;
  background: var(--forest-green-traditional);
  box-shadow: 0 0 15px var(--forest-green-traditional-shadow);
}
header.filled nav {
  padding-top: 58px;
}

header span {
  font-size: 20px;
  font-family: 'Pacifico', cursive;
  z-index: 103;
}

header nav {
  position: fixed;
  left: 0; top: 0;
  width: 100%;
  background: var(--blue-jeans);
  border-radius: 0 0 50px 0;
  display: flex;
  flex-direction: column;
  padding-top: calc(78px + 25px);  /* height of header + 25px padding */
  padding-bottom: 50px;  /* height of ::after */
  z-index: 102;
  transform: translateY(calc(-100% - 50px));  /* 50px height of ::after */
  transition: 0.25s transform ease-out,
              0.25s padding ease-out;
}
header nav::before {
  content: '';
  position: absolute;
  left: 0; top: 0;
  width: 100%;
  height: 78px;  /* height of header */
  background: var(--light-blue);
  transition: 0.25s height ease-out;
}
header.filled nav::before {
  height: 58px;  /* height of header */
}
header nav::after {
  content: '';
  position: absolute;
  left: 0; bottom: 0;
  transform: translateY(100%);
  width: 100px; height: 100px;
  border-radius: 50%;
  box-shadow: -50px -50px 0 var(--blue-jeans);
  z-index: -1;
}
header nav.active { transform: translateY(0); }
header nav a {
  color: white;
  padding: 10px 25px;
  display: block;
  transition: 0.15s background ease-out;
}
header nav a:hover {
  background: var(--light-blue);
}

#header-bg {
  position: fixed;
  left: 0; top: 0;
  width: 100%;
  height: 100vh;
  background: #0c1a0dcc;
  z-index: 101;
  transform: translateY(-100%);
  opacity: 0;
  transition: 0.25s opacity ease-out;
}
#header-bg.active {
  opacity: 1;
  transform: translateY(0);
}

.nav-toggle {
  position: relative;
  cursor: pointer;
  width: 30px;
  height: 25px;
  transition: 0.25s transform ease-in-out;
  z-index: 103;
}
.nav-toggle.active {
  transform: rotate(-90deg);
}

.nav-toggle span {
  background-color: white;
  border-radius: 2px;
  content: '';
  display: block;
  width: 100%;
  height: 4px;
}

.nav-toggle span:nth-child(1) {
  animation: out-top 0.5s ease-in-out;
}
.nav-toggle span:nth-child(2) {
  margin: 5px 0;
  animation: out-mid 0.5s ease-in-out;
}
.nav-toggle span:nth-child(3) {
  animation: out-btm 0.5s ease-in-out;
}

.nav-toggle.active span:nth-child(1) {
  animation: in-top 0.5s ease-in-out forwards;
}
.nav-toggle.active span:nth-child(2) {
  animation: in-mid 0.5s ease-in-out forwards;
}
.nav-toggle.active span:nth-child(3) {
  animation: in-btm 0.5s ease-in-out forwards;
}

/* to hamburger */
@keyframes out-top {
  0% { transform: translateY(9px) rotate(-135deg); }
  50% { transform: translateY(9px) rotate(0); }
  100% { transform: translateY(0) rotate(0); }
}
@keyframes out-mid {
  0% { transform: rotate(-45deg); }
  50% { transform: rotate(0); }
}
@keyframes out-btm {
  0% { transform: translateY(-9px) rotate(-135deg); }
  50% { transform: translateY(-9px) rotate(0); }
  100% { transform: translateY(0) rotate(0); }
}

/* to x btn */
@keyframes in-top {
  0% { transform: translateY(0) rotate(0); }
  50% { transform: translateY(9px) rotate(0); }
  100% { transform: translateY(9px) rotate(-135deg); }
}
@keyframes in-mid {
  50% { transform: rotate(0); }
  100% { transform: rotate(-45deg); }
}
@keyframes in-btm {
  0% { transform: translateY(0) rotate(0); }
  50% { transform: translateY(-9px) rotate(0); }
  100% { transform: translateY(-9px) rotate(-135deg); }
}


#intro {
  position: relative;
  height: 105vh;
  padding-top: 78px;  /* height of header */
  padding-bottom: calc(5vh + 25px);
  background: var(--forest-green-traditional);
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100vh);
}

#main-logo-wrap {
  position: absolute;
  right: 0;
  top: 50vh;
  transform: translate(67%, -50%);
  border-radius: 50%;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  border: max(1.5vmax, 15px) solid var(--forest-green-traditional-shadow);
  background: var(--forest-green-traditional-shadow);
}
#main-logo {
  width: 100vmax;
  height: 100vmax;
  animation: 3s teeter ease-in-out alternate infinite;
}
#main-logo.blurred { filter: blur(5px); }
@keyframes teeter {
  0% { transform: rotate(-2.5deg); }
  100% { transform: rotate(2.5deg); }
}
.main-logo-overlay {
  content: '';
  position: absolute;
  left: 0; top: 0;
  width: 100vmax;
  height: 100vmax;
  border-radius: 50%;
  background: var(--blue-jeans);
  box-shadow: 0 0 3vmax 1vmax var(--forest-green-traditional-shadow) inset;
  opacity: 0.55;
}

#intro div { z-index: 1; /* ensure text appears above img */ }
#intro .blurb p {
  position: relative;
  margin: 10px 0;
  font-size: 16px;
  max-width: 70vw;
}
#intro .blurb i { font-weight: bold; }
#intro .blurb span {
  position: absolute;
  left: 0; top: 0;
  opacity: 0;
  transition: 1s opacity ease-in-out;
  font-size: 24px;
  font-family: 'Pacifico', cursive;
  text-shadow: 2.5px 2.5px 2.5px var(--forest-green-traditional-shadow);
}
#intro .blurb span.active { opacity: 1; }

#intro .details {
  line-height: min(10vh, 72px);
  align-self: flex-end;
  text-align: center;
  margin-bottom: 30px;  /* bugfix: mobile browser height shift */
}
@media (min-width: 450px) and (min-height: 850px) {
  /* remove mobile browser height shift bugfix */
  #intro .details { margin-bottom: 0; }
}

#intro .details h1 {
  font-size: min(10vh, 72px);
  font-weight: normal;
  font-family: 'Pacifico', cursive;
  margin-bottom: 10px;
  text-shadow: 5px 5px 5px var(--forest-green-traditional-shadow);
}
#intro .details h2 { font-size: min(5vh, 32px); }

#intro .details a {
  margin: 0 15px;
  text-decoration: none;
}
#intro .details img {
  width: 35px;
  transition: 0.25s transform ease-in-out;
}
#intro .details img:hover {
  transform: scale(1.25);
  filter: drop-shadow(0 0 5px var(--electric-indigo));
}
/* ... */

